syntax = "proto3";

package data;

option go_package = "./;data";

enum Status {
    READY = 0;
    RUNNING = 1;
    SUCCESS = 2;
    FAILED = 3;
    ABORTED = 4;
}

// Request message to update the run status of job
message UpdateStatusReq {
	string JobName = 1;
    Status Status = 2;
}

// Response message for job's run status update
message UpdateStatusRes {}

// Service to check and free the holded job
service UpdateStatus {
	rpc Update(UpdateStatusReq) returns (UpdateStatusRes) {}
}